# rusve

./: .gitignore  AFAIRE  CLAUDE.md  Caddyfile  Caddyfile.dev  Makefile  README.dev.md  README.md  README2.md  docker-compose.app.yml  docker-compose.db.yml  docker-compose.otel.yml  docker-compose.prod.yml  otel-collector.yml  proto.sh
client/: .env  Dockerfile  package.json  pnpm-lock.yaml
client/src/: app.css
client/src/lib/: errors.ts  utils.ts
client/src/lib/form/: Button.svelte  FileInput.svelte  Input.svelte
client/src/lib/server/: api.ts  logger.ts  metadata.ts
client/src/lib/ui/: Drawer.svelte  Toast.svelte  pagination.ts  toast.ts
client/src/routes/: +layout.svelte
client/src/routes/(app)/: Avatar.svelte
client/src/routes/(app)/dashboard/: +page.svelte
client/src/routes/(app)/emails/: +page.server.ts
client/src/routes/(app)/files/: +page.svelte
client/src/routes/(app)/notes/: +page.server.ts
client/src/routes/(app)/profile/: +page.server.ts  +page.svelte
client/src/routes/auth/: +page.svelte
clients/android/: capacitor.settings.gradle
clients/webapp/: Dockerfile  capacitor.config.ts  package.json  pnpm-lock.yaml  svelte.config.ts  tsconfig.json  vite.config.ts
clients/webapp/src/: hooks.server.ts
clients/webapp/src/lib/: safe.ts  utils.ts
clients/webapp/src/lib/form/: Button.svelte  Dropzone.svelte  Input.svelte  Input2.svelte
clients/webapp/src/lib/mobile/: api.ts  (+1 more)
clients/webapp/src/routes/: +error.svelte
documentation/: capacitor-mobile.md  exec_capacitor.md  grafana.md  mail_capability.md  maildoublon.md  otel-collector.md  phase2complete.md  plan_capacitor.md  prometheus.md  scraping-implemented.md  scraping-pipeline.md  zipkin.md
grafana/provisioning/datasources/: datasources.yml
proto/: Cargo.toml  package.json  proto.rs
scrapers/: Dockerfile  requirements.txt  run.py
scripts/: capacitor-setup.sh  capacitor.sh  keys.sh
service-auth/: Cargo.toml  README.md
service-auth/src/: auth_service.rs  lib.rs  main.rs  proto.rs
service-notes/: Cargo.toml
service-notes/src/: lib.rs  main.rs
service-users/: Cargo.toml
service-users/src/: grpc.rs  lib.rs  main.rs
service-utils/: Cargo.toml
service-utils/src/: lib.rs  main.rs
services/service-auth/: Cargo.toml
services/service-auth/src/: auth_oauth.rs  auth_service.rs  lib.rs  local_auth.rs  main.rs  migrations.rs
services/service-notes/: Cargo.toml
services/service-notes/src/: main.rs  note_service.rs
services/service-scraper/: Cargo.toml  Dockerfile
services/service-scraper/src/: lib.rs  main.rs  migrations.rs  proto.rs  scraper_db.rs  scraper_service.rs  scraper_validation.rs
services/service-users/: Cargo.toml  public.key
services/service-users/src/: lib.rs
services/service-utils/: Cargo.toml
services/service-utils/src/: email_db.rs  email_service.rs  file_service.rs  grpc.rs  lib.rs  main.rs
(+88 files in other folders)
