[package]
name = "service-notes"
version = "0.1.0"
edition = "2024"

[dependencies]
# Main
anyhow = "1.0"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
uuid = { version = "1.3", features = ["default", "v7"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = { version = "10.3", default-features = false, features = ["rust_crypto"] }

# Trace
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "metrics"] }
opentelemetry-semantic-conventions = "0.27"
tracing-opentelemetry = "0.28"

# Async
tokio = { version = "1.50", features = ["rt-multi-thread", "macros", "sync" ] }
tokio-stream = "0.1"
futures-util = "0.3"
futures-core = "0.3"

# Database
tokio-postgres = { version = "0.7.16", features = ["with-uuid-1", "with-time-0_3", "array-impls"] }
tokio-postgres-rustls = "0.13.0"
rustls = "0.23"
rustls-native-certs = "0.8.3"
deadpool-postgres = "0.14.1"

# gRPC
prost = "0.14.3"
tonic = { version = "0.14.5", features = ["tls-ring", "tls-native-roots"] }
tonic-prost = "0.14.5"

